--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -18,21 +18,7 @@
 			<button class="navbar-toggler navbar-border" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 				<img class="diamant-navbar-translate" src="{{ asset('build/images/Frame.svg') }}">
 			</button>
-<<<<<<< HEAD
-			<img src="{{ asset('build/images/AFAC.png') }}">
-			<a href="{{ path('app_login')}}">
-				<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
-			</a>
-			<p>
-				{% if app.user %}
-					{{ app.user.email }}
-					<a class="nav-link" href="{{ path('app_logout')}}">Logout</a>
-				{% else %}
-					<a class="nav-link" href="{{ path('app_login')}}">Login</a>
-				{% endif %}
-			</p>
-			
-=======
+
 			<a href="{{ path('home_index')}}">
 				<img src="{{ asset('build/images/AFAC.png') }}">
 			</a>
@@ -41,7 +27,7 @@
 					Mon compte
 				</a>
 				<a href="{{ path('app_logout')}}">
-					Déconnection
+					Déconnexion
 				</a>
 
 			{% else %}
@@ -49,7 +35,6 @@
 					<img class="nav-link" src="{{ asset('build/images/user.svg') }}">
 				</a>
 			{% endif %}
->>>>>>> 89e77f6984d8ba9c7e4c56fd61f6b9ba5fa0f920
 		</div>
 	</nav>
 </div>
