--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
 		{% endif %}
 
 		<h1 class="h3 mb-3 font-weight-normal">
-			CONNECTION</h1>
+			CONNEXION</h1>
 		<label for="inputEmail">Email</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 		<label for="inputPassword">Password</label>
