--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -1,3 +1,3 @@
-.offcanvas {
-    width: 300px !important;
-}
+.bg-special{    
+    background: linear-gradient(90deg, #2885AA 0%, #730F46 100%); 
+} 
