--- a/templates/admin/artist/index.html.twig
+++ b/templates/admin/artist/index.html.twig
@@ -3,61 +3,68 @@
 {% block title %}Gestion des utilisateurs{% endblock %}
 
 {% block body %}
-<h1 class="mx-auto pt-4">Liste des Utilisateurs</h1>
+<h1 class="mx-auto pt-4">Liste des Artistes</h1>
 <div class= 'd-flex justify-content-center'>
     {{ form(form, {'attr': {'class': 'mx-auto'}}) }}
     </div>
     {{ form_end(form) }} 
-    {% if users|length > 0 %}
+    {% if artists|length > 0 %}
+
     <table class="table px-4 table-striped table-hover">
         <thead>
             <tr>
+                 <th scope="col">#</th>
                  <th scope="col">Nom</th>
                  <th scope="col">Prénom</th>
+                 <th scope="col">Description</th>
+                 <th scope="col">Photo</th>
                  <th scope="col">Email</th>
-                 <th scope="col">Rôles</th>
                  <th scope="col">Opérations</th>
             </tr>
         </thead>
         <tbody>
-            {% for user in users %}
+            {% for artist in artists %}
                 <tr>
-                    <td>{{ user.name }}</td>
-                    <td>{{ user.lastname }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.roles | join(', ') }}</td>
-                    <td class="d-flex">
-                    <div class="px-1">
-                        <a href="{{ path('admin_edit_user', {'id': user.id}) }}" class="btn btn-primary">
+                    <td>{{ artist.id }}</td>
+                    <td>{{ artist.name }}</td>
+                    <td>{{ artist.lastname }}</td>
+                    <td>{{ artist.description }}</td>
+                    <td>
+                        {% if artist.poster != 'default_poster_value.svg' %}
+                            <img class= "img-fluid" src="/uploads/artistPhoto/{{ artist.poster }}" alt="{{artist.name}} {{artist.lastname}}">
+                        {% else %}
+                            <img  class="img-fluid" src="{{ asset("build/images/artistPortfolio/default_poster_value.svg") }}" alt="{{ artist.name }} Poster">
+                        {% endif %}
+                    </td>
+                    <td>{{ artist.email }}</td>
+                    <td>
+                        <a href="{{ path('admin_user_edit', {'id': artist.id}) }}" class="btn btn-primary mb-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                             <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                             <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                        </svg>
+                            </svg>
                         </a>
-                    </div>
-                    <div>
-                        <form method="post" action="{{ path('admin_delete_user', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+                        <form method="post" action="{{ path('admin_artist_delete', {'id': artist.id}) }}" onsubmit="return confirm('Are you sure you want to delete this artist?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ artist.id) }}">
                             <button type="submit" class="btn btn-danger">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
                                 </svg>
                             </button>
                         </form>
-                    </div>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-    </div>
+     </div>
     {% else %}
     <div class="d-flex mb-4 justify-content-center">
         <p>Aucun artiste ne correspond à votre recherche.</p>
     </div>
-    {% endif %} 
+    {% endif %}  
      <div class= 'd-flex justify-content-center'>
-    {{ knp_pagination_render(users) }}
+    {{ knp_pagination_render(artists) }}
     </div>
 
 {% endblock %}
