--- a/templates/admin/artwork/edit.html.twig
+++ b/templates/admin/artwork/edit.html.twig
@@ -22,6 +22,6 @@
         <button type="submit" class="btn btn-primary bouton-general"> Sauvegarder ses changements</button>
     {{ form_end(form) }}
 
-    <a href="{{ path('admin_show_artworks') }}" class="btn btn-secondary mt-2">Retour</a>
+    <a href="{{ path('admin_artwork_index') }}" class="btn btn-secondary mt-2">Retour</a>
      </div>
 {% endblock %}
