quelques fix + dashboard

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,5 +1,6 @@
 $color-form: #c9dbe2 ;
 $primary:#4E4A78;
+$secondary:#fff;
 $bs-btn-color: #fff;
 $font-family-titres: 'Bebas Neue', sans-serif;
 $font-family-textes: 'Pill Gothic 600mg', sans-serif;
