--- a/templates/admin/artwork/index.html.twig
+++ b/templates/admin/artwork/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard.html.twig' %}
 
 {% block title %}Gestion des oeuvres{% endblock %}
 
@@ -9,7 +9,7 @@
     </div>
     {{ form_end(form) }}    
 
-    <table class="table px-4 table-striped table-hover">
+    <table class="table px-4 container table-striped table-hover">
         <thead>
             <tr>
                  <th scope="col">#</th>
