--- a/templates/artwork/artwork.html.twig
+++ b/templates/artwork/artwork.html.twig
@@ -23,7 +23,7 @@
                 <div class="col">
                     <h3 class="mt-5">Artiste</h3>
 
-                    <p class="pe-3">{{artwork.artist.name}} {{artwork.artist.lastname}}</p>    
+                    <p class="pe-3">{{artwork.user.name}} {{artwork.user.lastname}}</p>    
                 </div>
                 <div class="col">
                     <h3 class="mt-5">Année</h3>
