--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 	<h1 class="text-center mt-5 mb-5">Mes informations</h1>
-	<div class="container border-general">
+	<div class="container mb-5 border-general">
 		<table class="table">
 			<tbody>
 
