--- a/templates/admin/contact/index.html.twig
+++ b/templates/admin/contact/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard.html.twig' %}
 
 {% block title %}Gestion - Contact {% endblock %}
 
@@ -9,7 +9,7 @@
     </div>
     {{ form_end(form) }} 
     {% if contacts|length > 0 %}
-    <table class="table px-4 table-striped table-hover">
+    <table class="table px-4 container table-striped table-hover">
         <thead>
             <tr>
                  <th scope="col">#</th>
