--- a/templates/artwork/new.html.twig
+++ b/templates/artwork/new.html.twig
@@ -4,12 +4,12 @@
 
 <h1 class="container text-center mt-5">Ajouter une oeuvre</h1>
 
-<div class="container mt-5 border-general p-5">
+<div class="container mt-5 mb-5 border-general p-5">
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
 
-    <div class="d-grid col-6 mx-auto bouton-general">
+    <div class="d-grid col-6  mx-auto bouton-general">
         <button class=" btn btn-primary" type="submit">Ajouter une image</button>
     </div>
 
