--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -26,15 +26,15 @@
 			</a>
 
 			{% if app.user %}
-			<div class="dropdown">
+			<div class="btn-group">
 				<button class="btn btn-primary dropdown-toggle me-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 					{{ app.user.pseudonym}}
 				</button>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu dropdown-menu-start">
 					<li><a class="dropdown-item" href="{{ path('app_user_show', {'id': app.user.id} )}}">Mes informations</a></li>
 					<li><a class="dropdown-item" href="{{ path('artwork_show_favorites')}}">Mes favoris</a></li>
 					{% if is_granted('ROLE_ADMIN') %}
-					<li><a class="dropdown-item" href="{{ path('admin_app_dashboard')}}">Dashboard</a></li>
+					<li><a class="dropdown-item" href="{{ path('admin_dashboard')}}">Dashboard</a></li>
 					{% elseif is_granted('ROLE_ARTIST') %}
 					<li><a class="dropdown-item" href="{{ path('artwork_new')}}">Ajouter une oeuvre</a></li>
 					{% endif %}
