--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -8,6 +8,9 @@
 				<a href="{{ path('home_artists')}}">
 					<li>Nos artistes</li>
 				</a>
+				<a href="{{ path('expo_index')}}">
+					<li>Nos expositions</li>
+				</a>
 				<a href="{{ path('app_contact')}}">
 					<li>Contact</li>
 				</a>
@@ -37,6 +40,7 @@
 					<li><a class="dropdown-item" href="{{ path('admin_dashboard')}}">Dashboard</a></li>
 					{% elseif is_granted('ROLE_ARTIST') %}
 					<li><a class="dropdown-item" href="{{ path('artwork_new')}}">Ajouter une oeuvre</a></li>
+					<li><a class="dropdown-item" href="{{ path('expo_new')}}">Ajouter une expo</a></li>
 					{% endif %}
 					<li><a class="dropdown-item" href="{{ path('app_logout')}}">Déconnexion</a></li>
 				</ul>
