expo coté admin/ artist et user , début de news

--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
     <h1 class="mx-auto pt-4">Modification du profil utilisateur</h1>
-     <p>Utilisateur: {{ user.getName() }}  {{ user.getLastName() }}</p>
-    <div class="container mx-auto border-general">
+    <div class="container mb-5 mt-5 mx-auto border-general">
     {{ form_start(form,  {'attr': {'enctype': 'multipart/form-data'}}) }}
         {{ form_row(form.name) }}
         {{ form_row(form.lastname) }}
