--- a/templates/include/_navbar_dashboard.html.twig
+++ b/templates/include/_navbar_dashboard.html.twig
@@ -13,6 +13,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="{{ path('admin_artwork_index')}}">Oeuvres</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{{ path('admin_expo_index')}}">Expos</a>
+        </li>
 			<div class="dropdown">
 				<button class="btn btn-secondary btn-secondary-dashboard dropdown-toggle me-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 					{{ app.user.name}}
