--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,9 +1,6 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'enctype': 'multipart/form-data'}}) }}
  		<div class="mb-3">
             {{ form_row(form.email) }}
-        </div>
-		<div class="mb-3">
-            {{ form_row(form.password) }}
         </div>
 		<div class="mb-3">
             {{ form_row(form.name) }}
@@ -13,6 +10,12 @@
         </div>
 		<div class="mb-3">
             {{ form_row(form.pseudonym) }}
+        </div>
+        <div class="mb-3">
+            {{ form_row(form.posterFile) }}
+        </div>
+        <div class="mb-3">
+            {{ form_row(form.description) }}
         </div>
 	<button type="submit" class="btn btn-lg btn-primary mb-2">
 	{{ button_label|default('Créer mon compte') }}
