--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -11,6 +11,8 @@
 
 	<div class="fb-login-button p-3" data-width="" data-size="large" data-button-type="continue_with" data-layout="" data-auto-logout-link="false" data-use-continue-as="true"></div>
 	<div class="border-general mb-5">
+	<p class="text-center">Nous vous conseillons d'ajouter une photo de profil et une description 
+	si vous comptez faire une demande de rôle artiste sur notre page de contact</p>
 	{{ include('user/_form.html.twig') }}
 	<form>
 		<a class="btn btn-lg btn-primary" href="{{ path('app_login') }}">Retour à la page de connexion</a>
