--- a/templates/expo/index.html.twig
+++ b/templates/expo/index.html.twig
@@ -24,7 +24,7 @@
     </div>
      {% else %}
     <div class="d-flex mt-4 justify-content-center">
-        <p>Vous n'avez référencé aucune exposition.</p>
+        <p>Aucune expostion n'est référencé pour l'instant.</p>
     </div>
        {% endif %}
 <div class= 'd-flex justify-content-center'>
