--- a/templates/home/artists.html.twig
+++ b/templates/home/artists.html.twig
@@ -20,7 +20,7 @@
                     
                     <p class="mx-auto">
                         {# compléter lien dès que les pages artistes son dispos#}
-                        <a href="#"><img class="know-more px-1" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
+                        <a href="{{path('home_OneArtist', {'name': artist.name}) }}"><img class="know-more px-1" src="{{ asset('build/images/plus.svg') }}"> En savoir plus</a>
                     </p>
                     
                 </div>
