--- a/templates/artwork/edit.html.twig
+++ b/templates/artwork/edit.html.twig
@@ -3,12 +3,12 @@
 {% block title %}Modification de l'oeuvre{% endblock %}
 
 {% block body %}
-    <h1 class="mx-auto pt-4">Modification de l'oeuvre "{{ artwork.getTitle() }}" par {{ artwork.artist.name}} {{ artwork.artist.lastname}}</h1>
+    <h1 class="mx-auto pt-4">Modification de l'oeuvre {{artwork.title}} par {{ artwork.user.name}} {{ artwork.user.lastname}}</h1>
     
-    <div class="container mx-auto border-general">
+    <div class="container mx-auto border-general mb-5">
     {{ form_start(form, {'attr': {'enctype': 'multipart/form-data'}}) }}
         {{ form_row(form.title) }}
-        {{ form_row(form.artist) }}
+        {{ form_row(form.user) }}
         {{ form_row(form.type) }}
         {{ form_row(form.description) }}
         {{ form_row(form.year) }}
@@ -19,9 +19,9 @@
         {{ form_row(form.isUnique) }}
         
 
-        <button type="submit" class="btn btn-primary bouton-general"> Sauvegarder ses changements</button>
+        <button type="submit" class="btn btn-danger"> Sauvegarder ses changements</button>
     {{ form_end(form) }}
 
-    <a href="{{ path('artwork_show_artworks', {id: artist.id}) }}" class="btn btn-secondary mt-2">Retour</a>
+    <a href="{{ path('artwork_showMyArtworks') }}" class="btn btn-secondary mt-2">Retour</a>
      </div>
 {% endblock %}
