--- a/templates/home/oneArtist.html.twig
+++ b/templates/home/oneArtist.html.twig
@@ -9,13 +9,13 @@
 
 <div class="container border-general mb-5 mt-2 px-4">
 
-    <div class="row justify-content-center gap-4">
+    <div class="row justify-content-center gap-2 ">
 
-        <img class="col-6" src="/uploads/artistPhoto/{{ artist.poster }}" alt="{{ artist.poster }}">
+        <img class="col-6 img-fluid" src="/uploads/artistPhoto/{{ artist.poster }}" alt="{{ artist.poster }}">
         
-        <div class="card-body col-5">
+        <div class="card-body col-4">
 
-            <h2 class="card-title mb-5">A propos de cet artiste</h2>
+            <h2 class="card-title mb-3">A propos de cet artiste</h2>
 
             <div class="row">
                 <div class="col">
