--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -35,8 +35,9 @@
 				<button class="btn btn-primary dropdown-toggle me-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 					{{ app.user.pseudonym}}
 				</button>
-				<ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+				<ul class="dropdown-menu dropdown-menu-end">
 					<li><a class="dropdown-item" href="{{ path('app_user_show', {'id': app.user.id} )}}">Mes informations</a></li>
+					<li><a class="dropdown-item" href="{{ path('artwork_showMyArtworks')}}">Mes oeuvres</a></li>
 					<li><a class="dropdown-item" href="{{ path('artwork_show_favorites')}}">Mes favoris</a></li>
 					{% if is_granted('ROLE_ADMIN') %}
 					<li><a class="dropdown-item" href="{{ path('admin_dashboard')}}">Dashboard</a></li>
