--- a/templates/admin/expo/index.html.twig
+++ b/templates/admin/expo/index.html.twig
@@ -32,7 +32,7 @@
                         <img class= "img-fluid" src="/uploads/expo/{{ expo.picture }}" alt="{{expo.picture}}">
                     </td>
                     <td>
-                        <form method="post" action="{{ path('admin_expo_delete', {'id': expo.id}) }}" onsubmit="return confirm('Are you sure you want to delete this expo?');">
+                        <form method="post" action="{{ path('admin_expo_delete', {'id': expo.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette exposition');">
                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ expo.id) }}">
                             <button type="submit" class="btn btn-danger">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
