--- a/templates/admin/news/index.html.twig
+++ b/templates/admin/news/index.html.twig
@@ -25,7 +25,7 @@
                     <td>{{ new.title }}</td>
                     <td>{{ new.description }}</td>
                     <td>
-                        <form method="post" action="{{ path('admin_news_delete', {'id': new.id}) }}" onsubmit="return confirm('Are you sure you want to delete this news?');">
+                        <form method="post" action="{{ path('admin_news_delete', {'id': new.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette newsletter?');">
                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ new.id) }}">
                             <button type="submit" class="btn btn-danger">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
