--- a/templates/expo/showMyExpos.html.twig
+++ b/templates/expo/showMyExpos.html.twig
@@ -22,7 +22,7 @@
                             </a>
                         </div>
                         <div class="col-1">
-                        <form method="post" action="{{ path('expo_delete', {'id': expo.id}) }}" onsubmit="return confirm('Are you sure you want to delete this expo?');">
+                        <form method="post" action="{{ path('expo_delete', {'id': expo.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cette exposition?');">
                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ expo.id) }}">
                             <button type="submit" class="btn btn-danger">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
